2008-09-01  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Ported build system of spellcheck plugin.


2008-07-15  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Make plugin work together with Geany plugin API v78.


2008-07-11  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Make plugin compile with Geany svn r2767.


2008-06-26  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Update of used plugin API to v71.


2008-06-17  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * configure.in:
   Fix build using autogen.sh (Makefile.in was not created).
 * latexencodings.h:
   Fix multiple definition of latex_encodings array.


2008-06-17  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Moved plugin to geany-plugin svn.