@@ -35,6 +35,10 @@
 #include "prefs.h"
 #include "pluginmacros.h"
 
+#ifdef HAVE_LOCALE_H
+# include <locale.h>
+#endif
+
 #include "datatypes.h"
 #include "letters.h"
 #include "latexencodings.h"
@@ -799,6 +803,31 @@ static void kbwizard(G_GNUC_UNUSED guint key_id)
 	wizard_activated(NULL, NULL);
 }
 
+static void locale_init(void)
+{
+#ifdef ENABLE_NLS
+	gchar *locale_dir = NULL;
+
+#ifdef HAVE_LOCALE_H
+	setlocale(LC_ALL, "");
+#endif
+
+#ifdef G_OS_WIN32
+	gchar *install_dir = g_win32_get_package_installation_directory("geany", NULL);
+	/* e.g. C:\Program Files\geany\lib\locale */
+	locale_dir = g_strconcat(install_dir, "\\share\\locale", NULL);
+	g_free(install_dir);
+#else
+	locale_dir = g_strdup(LOCALEDIR);
+#endif
+
+	bindtextdomain(GETTEXT_PACKAGE, locale_dir);
+	bind_textdomain_codeset(GETTEXT_PACKAGE, "UTF-8");
+	textdomain(GETTEXT_PACKAGE);
+	g_free(locale_dir);
+#endif
+}
+
 void
 plugin_init(G_GNUC_UNUSED GeanyData * data)
 {
@@ -811,6 +840,8 @@ plugin_init(G_GNUC_UNUSED GeanyData * data)
 	init_encodings_latex();
 
 	tooltips = gtk_tooltips_new();
+
+	locale_init();
 
 	menu_latex = gtk_menu_item_new_with_mnemonic(_("_LaTeX"));
 	gtk_container_add(GTK_CONTAINER(geany->main_widgets->tools_menu), menu_latex);
